# ferret

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  test_all.py
example/: agent.conf.example  ferret-agent.service.example  ferret-server.service.example  ferret-tun.service.example  main.py  portal_tcp_listener.py
src/ferret/: __init__.py  core.py  crypto.py  hw_id.py
src/ferret/cli/: agent.py  db_crypt.py  forward.py  server.py  socks.py  tun_client.py
src/ferret/gui/: tray.py
src/ferret/handlers/: __init__.py  _sms_web_ui.py  ai.py  ami.py  proxy.py  sms.py  tcp_proxy.py  tun.py
src/ferret/server/: __init__.py  acl.py  audit.py  ca.py  installer.py  registry.py  router.py  token_gen.py  tun_gateway.py  ui.py
