[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ferret-agent"
version = "0.1.2"
description = "Ferret — self-hosted outbound tunnel agent. No port forwarding, no third-party cloud."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
keywords = ["tunnel", "vpn", "remote-access", "websocket", "self-hosted", "firewall", "nat-traversal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
    "Topic :: Security",
    "Topic :: Internet",
]
dependencies = ["websockets>=12.0,<14"]

[project.optional-dependencies]
server = ["fastapi>=0.110", "uvicorn>=0.29", "cryptography>=42"]
crypto = ["cryptography>=42"]
gui    = ["pystray>=0.19", "Pillow>=10.0", "keyring>=24"]
all    = ["fastapi>=0.110", "uvicorn>=0.29", "cryptography>=42", "pystray>=0.19", "Pillow>=10.0", "keyring>=24"]

[project.scripts]
ferret         = "ferret.cli.agent:main"
ferret-server  = "ferret.cli.server:main"
ferret-forward = "ferret.cli.forward:main"
ferret-socks   = "ferret.cli.socks:main"
ferret-tun     = "ferret.cli.tun_client:main"
ferret-gui     = "ferret.gui.tray:main"
ferret-db      = "ferret.cli.db_crypt:main"

[project.urls]
Homepage   = "https://github.com/Dejan-Port/ferret"
Issues     = "https://github.com/Dejan-Port/ferret/issues"

[tool.setuptools.packages.find]
where = ["src"]
